@@ -40,6 +40,9 @@ MAIN GOAL for 0.6.0:
 
 -------------------------------------------------------------------------------
 
+   [ ]	Merge in the old C++ HISTORY entries into the main tree (for
+   	history preservation).
+
    [/]	STEP EXECUTIONS, REVERSE EXECUTION, SNAPSHOTTING, ...
 
 	[ ] When a component is added to the tree, recalculate its nr of steps!
